# BotFooChan

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/actions/setup-python/: action.yml
.github/workflows/: pyright.yml  release.yml  ruff.yml
docker/: gunicorn_conf.py
src/plugins/aliyun/: __init__.py  config.py  utils.py
src/plugins/aliyun/plugins/aliyun_cdn/: __init__.py
src/plugins/bili_parser/: __init__.py  common.py  consts.py  data_source.py  models.py  red.py  utils.py
src/plugins/deepseek/: __init__.py  config.py
src/plugins/dicer/: __init__.py  common.py  constant.py
src/plugins/dicer/assets/: madness_end.json  manias.json  phobias.json  temporary_madness.json
src/plugins/dicer/dice/: rd.py
src/plugins/fgo_server_status/: __init__.py  common.py
src/plugins/filehost/: __init__.py  config.py  models.py
src/plugins/llm_chat/: __init__.py  common.py  config.py
src/plugins/nbnhhsh/: __init__.py  common.py  config.py
src/plugins/nonebot_plugin_deepseek/: __init__.py  _types.py  compat.py  config.py  exception.py  extension.py  group_context.py  hook.py  log.py  placehold_prompt.py  utils.py  version.py
src/plugins/nonebot_plugin_deepseek/apis/: request.py
src/plugins/nonebot_plugin_deepseek/cli/: __init__.py  __main__.py
src/plugins/nonebot_plugin_deepseek/cli/plugins/: tts.py
src/plugins/nonebot_plugin_deepseek/function_call/: __init__.py  registry.py
src/plugins/nonebot_plugin_deepseek/function_call/builtins/: __init__.py  website_summary.py
src/plugins/nonebot_plugin_deepseek/resources/: tts_models.css
src/plugins/nonebot_plugin_deepseek/schemas/: __init__.py  balance.py  chat.py  logprobs.py  message.py  tts.py  usage.py
src/plugins/what2eat/: __init__.py  common.py  constant.py
src/plugins/what2eat/assets/: drinks.json  eatings.json
