[tool.poetry]
name = "botfoochan"
version = "0.1.0"
description = "Multi channel Mooncell bot"
authors = ["StarHeartHunt <starheart233@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

matplotlib = "^3.8.0"
playwright = "^1.38.0"

nonebot2 = { version = "^2.1.1", extras = ["httpx", "fastapi", "websockets"] }
nonebot-adapter-red = "^0.5.2"
nonebot-adapter-onebot = "^2.3.0"

nonebot-plugin-apscheduler = "^0.3.0"
nonebot-plugin-send-anything-anywhere = "^0.3.2"

nonebot-plugin-status = "^0.7.1"
nonebot-plugin-treehelp = "^0.3.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.9.3"
black = "^23.1.0"
nonemoji = "^0.1.2"
pre-commit = "^3.1.0"
ruff = ">=0.0.291,<0.1.0"

[tool.poetry.group.deploy.dependencies]
gunicorn = "^20.1.0"
uvicorn = ">=0.18.3,<1.0.0"

[tool.black]
preview = true
line-length = 88
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901", "UP037"]

line-length = 88
target-version = "py311"

[tool.ruff.extend-per-file-ignores]
"./scripts/*" = ["T201"]
"./docker/*" = ["T201"]

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"
executionEnvironments = [{ root = "./" }]

typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
