[tool.poetry]
name = "botfoochan"
version = "0.2.2"
description = "Multi channel Mooncell bot"
authors = ["StarHeartHunt <starheart233@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

diro-py = "^0.1.1"
matplotlib = "^3.8.0"
playwright = "^1.38.0"

nonebot2 = { version = "^2.1.1", extras = ["httpx", "fastapi", "websockets"] }

nonebot-adapter-qq = "^1.1.1"
nonebot-adapter-satori = "^0.10.0"
nonebot-adapter-feishu = "^2.3.0"
nonebot-adapter-onebot = "^2.3.0"

nonebot-plugin-sentry = "^1.0.0"
nonebot-plugin-alconna = ">=0.38.0,<1.0.0"
nonebot-plugin-filehost = "^1.1.0"
nonebot-plugin-shorturl = ">=0.4.0,<1.0.0"
nonebot-plugin-apscheduler = ">=0.4.0,<1.0.0"

nonebot-bison = ">=0.8.2,<1.0.0"
nonebot-plugin-treehelp = ">=0.3.0,<1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
isort = "^5.9.3"
black = "^24.0.0"
pre-commit = "^3.1.0"

[tool.poetry.group.deploy.dependencies]
gunicorn = "^21.1.0"
uvicorn = ">=0.18.3,<1.0.0"

[tool.black]
preview = true
target-version = ["py311", "py312"]
line-length = 88
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "W",     # pycodestyle warnings
  "E",     # pycodestyle errors
  "UP",    # pyupgrade
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "T20",   # flake8-print
  "PYI",   # flake8-pyi
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "RUF",   # Ruff-specific rules
]
ignore = [
  "E402",   # module-import-not-at-top-of-file
  "UP037",  # quoted-annotation
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.extend-per-file-ignores]
"./scripts/*" = ["T201"]
"./docker/*" = ["T201"]

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"

typeCheckingMode = "standard"
reportShadowedImports = false
disableBytesTypePromotions = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
